# TurkishPropBank-CPP

./: .gitignore  .gitmodules  Argument.cpp  ArgumentType.h  CMakeLists.txt  Frameset.cpp  Frameset.h  FramesetArgument.cpp  FramesetList.cpp  Predicate.cpp  PredicateList.cpp  PredicateList.h  README.md  Role.cpp  RoleSet.cpp  RoleSet.h  TestPropBank.cpp  conanfile.py  conanfile.txt  files-english.txt  files-turkish.txt
Frames-English/: backfire.xml  chirp.xml  code.xml  do.xml  grow.xml  have.xml  nip.xml  segue.xml  take.xml  turn.xml  whup.xml
Test/: ArgumentTypeTest.cpp  FramesetListTest.cpp  PredicateListTest.cpp
src/: Argument.cpp  Argument.h  ArgumentList.cpp  ArgumentList.h  ArgumentType.h  CMakeLists.txt  Frameset.cpp  Frameset.h  FramesetArgument.cpp  FramesetArgument.h  FramesetList.cpp  FramesetList.h  Predicate.cpp  Predicate.h  PredicateList.cpp  PredicateList.h  Role.cpp  Role.h  RoleSet.cpp  RoleSet.h
