cmake_minimum_required(VERSION 3.12)
project(PropBank)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
link_directories(library)
add_library(PropBank Argument.cpp Argument.h ArgumentType.h Role.cpp Role.h RoleSet.cpp RoleSet.h FramesetArgument.cpp FramesetArgument.h Frameset.cpp Frameset.h Predicate.cpp Predicate.h PredicateList.cpp PredicateList.h FramesetList.cpp FramesetList.h)
target_link_libraries(PropBank XmlParser)
add_executable(Test Argument.cpp Argument.h ArgumentType.h Role.cpp Role.h RoleSet.cpp RoleSet.h FramesetArgument.cpp FramesetArgument.h Frameset.cpp Frameset.h Predicate.cpp Predicate.h PredicateList.cpp PredicateList.h FramesetList.cpp FramesetList.h Test/catch.hpp Test/FramesetListTest.cpp Test/PredicateListTest.cpp Test/ArgumentTypeTest.cpp)
target_link_libraries(Test XmlParser)
